<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.example.minhquan.foodyv1.View.HomeActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_height_default"
        android:background="@color/colorPrimary"
        android:paddingLeft="@dimen/appbar_padding_left"
        android:paddingStart="@dimen/appbar_padding_left"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="12dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:background="#00000000"
                android:src="@drawable/ic_foody_logo"
                android:contentDescription="@string/str_appbar_logoDescription"
                android:id="@+id/imageView" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true">
                <RadioButton
                    android:id="@+id/button_where"
                    android:layout_width="48dp"
                    android:layout_height="24dp"
                    android:button="@null"
                    android:background="@drawable/bg_appbar_left"
                    android:text="@string/button_appbar_where"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:textColor="@drawable/color_text_appbar"/>
                <RadioButton
                    android:id="@+id/button_what"
                    android:layout_width="48dp"
                    android:layout_height="24dp"
                    android:button="@null"
                    android:background="@drawable/bg_appbar_right"
                    android:text="@string/button_appbar_what"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:textColor="@drawable/color_text_appbar"/>
            </RadioGroup>

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="16dp"
                android:tint="#ffffff"
                android:src="@drawable/ic_plus_trans"
                android:contentDescription="@string/text_appbar_action"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>
    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/appbar_height_default">
    </android.support.v4.view.ViewPager>
</RelativeLayout>
