<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"

    >

    <TabHost
        android:id="@+id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/LinearLayoutMain"
            android:orientation="vertical"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent">
            <TabWidget
                android:id="@android:id/tabs"
                android:layout_height="@dimen/toolbar_home_height"
                android:layout_width="fill_parent">
                <RadioGroup
                    android:id="@+id/radiogroup_filter"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/toolbar_home_height"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/button_newest"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="?android:buttonBarButtonStyle"
                        android:padding="2dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_button_filterbar"
                        android:button="@null"
                        android:drawableBottom="@drawable/ic_arrow_down_xs"
                        android:text="@string/str_home_filter_button1"
                        android:textStyle="normal"
                        android:textColor="@color/textColorMain"
                        android:textAllCaps="false"
                        android:textSize="12sp"/>
                    <RadioButton
                        android:id="@+id/button_category"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="?android:buttonBarButtonStyle"
                        android:layout_weight="1"
                        android:background="@drawable/bg_button_filterbar_middle"
                        android:button="@null"
                        android:drawableBottom="@drawable/ic_arrow_down_xs"
                        android:text="@string/str_home_filter_button2"
                        android:textStyle="normal"
                        android:textColor="@color/textColorMain"
                        android:textAllCaps="false"
                        android:textSize="12sp"/>
                    <RadioButton
                        android:id="@+id/button_location"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="?android:buttonBarButtonStyle"
                        android:layout_weight="1"
                        android:background="@drawable/bg_button_filterbar"
                        android:button="@null"
                        android:drawableBottom="@drawable/ic_arrow_down_xs"
                        android:text="@string/str_home_filter_location"
                        android:textStyle="normal"
                        android:textColor="@color/textColorMain"
                        android:textAllCaps="false"
                        android:textSize="12sp"/>
                </RadioGroup>
            </TabWidget>
            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent">

                <LinearLayout
                    android:id="@+id/tab_default"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="48dp"
                    android:orientation="vertical"
                    android:background="@color/colorBackground">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:verticalSpacing="8dp"
                        android:divider="@android:color/transparent"
                        android:dividerHeight="8dp"/>
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/tab_newest"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ListView
                        android:id="@+id/listView_newest"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:divider="@color/colorBackgroundDarker"
                        android:dividerHeight="1dp"/>
                    <Button
                        android:id="@+id/button_cancel1"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/colorWhite"
                        android:text="@string/str_button_cancel"
                        android:textAllCaps="false"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/tab_category"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ListView
                        android:id="@+id/listview_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="@color/colorBackgroundDark"
                        android:dividerHeight="1dp">
                    </ListView>
                    <Button
                        android:id="@+id/button_cancel2"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/colorWhite"
                        android:text="@string/str_button_cancel"
                        android:textAllCaps="false"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/tab_location"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <RelativeLayout
                        android:id="@+id/tab_location_topPanel"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_alignParentTop="true"
                        android:padding="8dp">
                        <TextView
                            android:id="@+id/tab_location_text_current_city"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:gravity="center_vertical"
                            android:text="TP.HCM"
                            android:textSize="@dimen/text_label"
                            android:textAllCaps="true"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"/>
                        <LinearLayout
                            android:id="@+id/button_changeCity"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:gravity="center_vertical">
                            <ImageView
                                android:layout_width="16dp"
                                android:layout_height="16dp"
                                android:layout_margin="8dp"
                                android:src="@drawable/ic_change_city"
                                android:contentDescription="@string/tmpdescrition" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/text_normal"
                                android:text="Đổi tỉnh thành"
                                android:gravity="center_vertical"/>
                        </LinearLayout>
                    </RelativeLayout>
                    <ExpandableListView
                        android:id="@+id/listView_district"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:divider="@color/colorBackgroundDark"
                        android:groupIndicator="@null"
                        android:dividerHeight="1dp"
                        android:layout_below="@id/tab_location_topPanel"/>
                    <Button
                        android:id="@+id/button_cancel3"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/colorWhite"
                        android:text="@string/str_button_cancel"
                        android:textAllCaps="false"/>
                </RelativeLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
</FrameLayout>
